packages/jsii/test/negatives/neg.method-name.2.ts
///!MATCH_ERROR: ERROR 'hello_world' must use camel-case

export class MyClass {
    hello_world() {
        return "hi";
    }
}
